# garmin-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
plans/: coach-event.md
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  tracing.rs  util.rs
src/commands/: activities.rs  auth.rs  badges.rs  calendar.rs  coach.rs  courses.rs  devices.rs  gear.rs  health.rs  helpers.rs  mod.rs  output.rs  profile.rs  raw.rs  records.rs  summary.rs  training.rs  workouts.rs
src/garmin/: auth.rs  client.rs  mod.rs
src/garmin/types/: badge.rs  calendar.rs  course.rs  device.rs  gear.rs  helpers.rs  mod.rs  profile.rs  records.rs  summary.rs  workout.rs
src/garmin/types/activity/: detail.rs  hr_zones.rs  lap.rs  mod.rs  power_zones.rs  split.rs  summary.rs  weather.rs
src/garmin/types/coach/: event.rs  labels.rs  mod.rs  phase.rs  plan.rs  projection.rs  task.rs  workout.rs
src/garmin/types/health/: body_battery.rs  heart_rate.rs  hrv.rs  hydration.rs  intensity_minutes.rs  mod.rs  respiration.rs  sleep.rs  spo2.rs  steps.rs  stress.rs  weight.rs
src/garmin/types/training/: endurance.rs  fitness_age.rs  hill.rs  hr_zones.rs  labels.rs  lactate.rs  mod.rs  race_predictions.rs  readiness.rs  scores.rs  status.rs
