[package]
name = "garmin-cli"
version = "3.1.0"
edition = "2024"
description = "Garmin Connect CLI"
license = "MIT"
repository = "https://github.com/co42/garmin-cli"
authors = ["Corentin Regal"]
readme = "README.md"
keywords = ["garmin", "cli", "fitness", "running"]
categories = ["command-line-utilities"]

[[bin]]
name = "garmin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3"
dirs = "6"
hmac = "0.13"
percent-encoding = "2"
rand = "0.10"
rpassword = "7"
reqwest = { version = "0.13", features = ["cookies", "form", "json", "multipart", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha1 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }
url = "2"
urlencoding = "2"
